Prevent title and author overflow

--- a/client/src/components/BookCard.scss
+++ b/client/src/components/BookCard.scss
@@ -1,12 +1,3 @@
-.book-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-}
-
 .book-card {
     height: 300px;
     transition: all .2s ease-in-out;
@@ -50,11 +41,14 @@
 }
 
 .title-div {
-    min-height: 72px;
+    min-height: 6em;
     margin-bottom: 10px;
+    overflow: hidden;
+    max-height: 6em;
 }
 
 .author-div {
     min-height: 48px;
     margin-bottom: 10px;
+    max-height: 48px;
 }
